EXTRA_DIST=\
  CERTIFICATES \
  CONFIG \
  IPCCOMMANDS \
  chipcardd2.conf.example \
  chipcardd2.conf.minimal \
  chipcardc2.conf.example \
  chipcardc2.conf.minimal \
  chipcardrd.conf.example

clientconfdir=@libchipcard2c_config_am@
clientconf_DATA=\
  chipcardc2.conf.example \
  chipcardc2.conf.minimal

serverconfdir=@libchipcard2s_config_am@
serverconf_DATA=\
  chipcardd2.conf.example \
  chipcardd2.conf.minimal \
  chipcardrd.conf.example


MAINTAINERCLEANFILES=Makefile.in

